# informatika3

./: README.md
cvicenia/01/: .gitignore  main.cpp
cvicenia/02/: .gitignore  CMakeLists.txt  display_row.cpp  display_row.hpp  main.cpp
cvicenia/02/src/: CMakeLists.txt  display_row.cpp  display_row.hpp  main.cpp
cvicenia/03-turtlepreter/: .gitignore  CMakeLists.txt
cvicenia/03-turtlepreter/lib/: CMakeLists.txt
cvicenia/03-turtlepreter/lib/libfriimgui/: CMakeLists.txt  gui_builder.cpp  (+7 more)
cvicenia/03-turtlepreter/resources/: config.json
cvicenia/03-turtlepreter/turtlepreter/: CMakeLists.txt  config.cpp  config.hpp  controllable.cpp  controllable.hpp  interpreter.cpp  interpreter.hpp  main.cpp  perk.cpp  perk.hpp  turtle.cpp  turtle.hpp  turtle_gui.cpp  turtle_gui.hpp
cvicenia/03/src/: CMakeLists.txt  display.cpp  display.hpp  display_row.cpp  display_row.hpp  filters.cpp  filters.hpp  game_of_life.cpp  game_of_life.hpp  heap_monitor.cpp  heap_monitor.hpp  main.cpp  terminal.cpp  terminal.hpp  ui_utils.cpp  ui_utils.hpp
cvicenia/04-data/: .clangd  .gitignore  CMakeLists.txt
cvicenia/04-data/libdf/: CMakeLists.txt  csv_config.cpp  csv_config.hpp  csv_loader.hpp  data_frame.hpp  loader.hpp
cvicenia/04-data/weather/: CMakeLists.txt  main.cpp  weather_data.cpp  weather_data.hpp
samostudium/: main.cpp  pSucet.txt  pVypisHodnotu.txt  vypisVelkosti.txt  zoznamy.txt
zadania/01/: .gitignore  CMakeLists.txt
zadania/01/src/: CMakeLists.txt  display.cpp  display.hpp  display_row.cpp  main.cpp  set_visualizer.cpp  set_visualizer.hpp  terminal.cpp  terminal.hpp
(+3 files in other folders)
